--- a/Proyecto-Angular/angular.json
+++ b/Proyecto-Angular/angular.json
@@ -25,10 +25,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
+              "src/styles.css",           
               "./node_modules/aos/dist/aos.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.js"              
+            ]
           },
           "configurations": {
             "production": {
