--- a/Proyecto-Angular/package.json
+++ b/Proyecto-Angular/package.json
@@ -23,7 +23,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@popperjs/core": "^2.11.6",
     "aos": "^2.3.4",
+    "bootstrap": "^5.2.3",
+    "jquery": "^3.6.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -34,6 +37,7 @@
     "@angular/compiler-cli": "^15.0.0",
     "@types/aos": "^3.0.4",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.16",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
