--- a/Proyecto-Angular/package.json
+++ b/Proyecto-Angular/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.6.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "typescript": "^4.8.2",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
@@ -43,7 +44,6 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.8.2"
+    "karma-jasmine-html-reporter": "~2.0.0"
   }
 }
